# broncho-mms

./: ChangeLog  Makefile.am  ProjectHome.md  configure  configure.in  gw-config.h
src/: TODO  gen_def.sh  http_transaction.h  mms.c  mms.pc.in  mms_body_part.h  mms_charset.c  mms_content_type.h  mms_header.c  mms_header_codec.c  mms_linux.h  mms_list.c  mms_list.h  mms_notify.c  mms_notify.h  mms_output_buffer.h  mms_smil.h  mms_transaction.h  mms_tw.c  mms_util.h  mms_win32.c  mms_xml.c  mms_xml.h  wap_push.c  wap_push.h  wsp_header_codec.h
src/testdata/: Makefile.am  marketupdate_nosmil.mms  realsend.mms  test.mms  tosend.mms  tosendok.mms  worldcupupdate_nosmil.mms  worldcupupdate_withsmil.mms
trunk/: Makefile.in  README  config.h.in
trunk/src/: Makefile.am  Makefile.in  autotest.sh  http_transaction.c  mms.def  mms.h  mms_body.c  mms_body.h  mms_body_part.c  mms_charset.h  mms_content_type.c  mms_header.h  mms_header_codec.h  mms_input_buffer.c  mms_input_buffer.h  mms_output_buffer.c  mms_smil.c  mms_socket.c  mms_socket.h  mms_transaction.c  mms_tw.h  mms_type.h  mms_util.c  mms_win32.h  wsp_header_codec.c
trunk/src/testdata/: Makefile.in  ad.txt  flourish.mid  gb2312.mms  marketupdate_withsmil.mms  realrecv.mms  score.txt  simpleget.txt  smil.xml  sp_mmspdu.mms  utf8.mms
trunk/vcprj/: Makefile.am
trunk/vcprj/mms/: mms.dsp
trunk/vcprj/mms_transaction_test/: Makefile.in  mms_transaction_test.dsw
vcprj/: Makefile.in
vcprj/mms/: Makefile.am  Makefile.in  mms.dsw
vcprj/mms_transaction_test/: Makefile.am  autotest.bat  mms_transaction_test.dsp
