autotestdatadir=$(prefix)/test/libware/mms/testdata
autotestdata_DATA=\
	ad.txt        marketupdate_nosmil.mms    simpleget.txt  utf8.mms\
	clock.wav     marketupdate_withsmil.mms  smil.xml       wap_push_mms.dat\
	flourish.mid  mms_notify.dat             sp_mmspdu.mms  wap_push_si.dat\
	gb2312.mms    nokia.gif                  Temp.txt       worldcupupdate_nosmil.mms\
	gol.gif       realrecv.mms               test.mms       worldcupupdate_withsmil.mms\
	Makefile.am   realsend.mms               tosend.mms\
	Makefile.in   score.txt                  tosendok.mms

